@@ -1,6 +1,4 @@
-DIST haserl-0.9.26.tar.gz 137013 RMD160 6d9b37ce963809d3bbae91b77fb7724228da9833 SHA1 97d68d5c340dd5accf3057b5afe4f06cd4436a60 SHA256 a62dc85d442a68e2283936899219fba70d5c8e032cdd36dc5c5d428eebc98fd5
 DIST haserl-0.9.27.tar.gz 139763 RMD160 7e8055ed429b9738e623bae1789c90d1f1910636 SHA1 9621075f6cd558c6eae57086d33bc5f916751d4a SHA256 c02a7e69505a8409264c89f4f8900a0f3273b8c5717119fe7adcd110e19f4a51
-EBUILD haserl-0.9.26.ebuild 586 RMD160 a59766b0e768bedea7d1e05593a0b2729d21b5aa SHA1 646b79780ba6166eb450daa7f142099c1b358966 SHA256 569dae44568df40184fd62e865430dd5589d9c68e345c2abd0c3e653a50324dd
 EBUILD haserl-0.9.27.ebuild 586 RMD160 a59766b0e768bedea7d1e05593a0b2729d21b5aa SHA1 646b79780ba6166eb450daa7f142099c1b358966 SHA256 569dae44568df40184fd62e865430dd5589d9c68e345c2abd0c3e653a50324dd
-MISC ChangeLog 1139 RMD160 d565a3251805ad28fce8f05fb03beaf7af2575f3 SHA1 2f588e72ac4c3044ddff8d001d3b2db6089b590f SHA256 f8768409db1fe72981832a632d0f5e6b17384525b9a9e79ce2bad4bd42a71b92
+MISC ChangeLog 1239 RMD160 6e1e2eca478a166a2f5556a4746e2f4c58299c07 SHA1 eb2c09d2ddc3089968b28ffaba13e57eb556c182 SHA256 31a50e97180eba57edc22656fecb7f14d17a3e1edf912f336b32d5c131f49496
 MISC metadata.xml 375 RMD160 da4e275a134bb9526242af8d64cbf4746d0f14dd SHA1 c1771d224a663545f1249f5c86407a116ea4c594 SHA256 be28c20c7ae98006f5d7718fc28b508ebaddc6106843de92f11bc127bbabc351
