@@ -1,29 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI="2"
-
-inherit eutils
-
-DESCRIPTION="HTML And Shell Embedded Report Language"
-HOMEPAGE="http://haserl.sourceforge.net/"
-SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~x86 ~amd64"
-IUSE="lua"
-
-RDEPEND="lua? ( dev-lang/lua )"
-DEPEND="${RDEPEND}
-	dev-util/pkgconfig"
-
-src_configure() {
-	econf $(use_with lua)
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "install failed"
-	dodoc AUTHORS ChangeLog README THANKS TODO
-}
