@@ -1,9 +1,12 @@
 # ChangeLog for www-apps/haserl
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
  05 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> metadata.xml:
  mass repoman fix
+
+  04 Jan 2011; A. Vinogradov <spamslepnoga@inbox.ru> -haserl-0.9.26.ebuild:
+  tree clean, drop old
 
 *haserl-0.9.25.ebuild
 
